# probably-average-computer-emulator-32

./: .gitignore
.github/workflows/: build.yml  cmake-multi-platform.yml  cmake-pico.yml
core/: ATAController.cpp  ATAController.h  CMakeLists.txt  CPU.cpp  CPU.h  CPUTrace.h  FloppyController.cpp  FloppyController.h  GamePort.cpp  GamePort.h  QEMUConfig.h  System.cpp  System.h  VGACard.cpp  VGACard.h
esp32/: CMakeLists.txt  DiskIO.cpp  DiskIO.h  Display.cpp  Display.h  Main.cpp  USB.cpp  USB.h  sdkconfig.defaults
minsdl/: DiskIO.cpp  DiskIO.h  Main.cpp
pico-shared/: BIOS.h  CMakeLists.txt  DiskIO.cpp  DiskIO.h  USBHID.cpp  tusb_config.h
pico2/: Audio_i2s.cpp  CMakeLists.txt  Display.h  Display_dbi.cpp  Display_dpi.cpp  Display_hstx.cpp  Main.cpp  config.h  dbi-8bit.pio
pico2/driver/: Display_hstx.cpp  config.h  dbi-spi.pio
pico2/driver/i2c/: seesaw.cpp  seesaw.h
